--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
     <article>
       <section>
         <h3>Hello, I'm William Strohe</h3>
-        <img src="images/japan.jpeg" alt="This is a photo of me sitting in a rose garden in Japan" width="500"/>
-        <p>I am a future software enginner from New Orleans, Louisiana.</p>
-        <p>In my time on this rock flying through space I have worked in alot of different feilds like:</p>
+        <img src="images/japan.jpeg" alt="This is a photo of me sitting in a rose garden in Japan" width="500" />
+        <p>I am a future software engineer from New Orleans, Louisiana.</p>
+        <p>In my time on this rock flying through space, I have worked in a lot of different fields like:</p>
         <ul>
           <li>Construction</li>
           <li>Snowboard Instructor</li>
           <li>Bartender</li>
-          <li>Restraunt Manager</li>
+          <li>Restaurant Manager</li>
           <li>Screen Printer</li>
         </ul>
         <p>You can say I'm kind of a "Jack of all Trades".</p>
@@ -45,8 +45,8 @@
 
       <section>
         <h3>About Me</h3>
-        <p>I grew up in south Louisiana in very much a small cajun town.  I have two sisters and I am a very new uncle.  I went to college for two years before I ended up moving to Colorado.  I saw snow for the first time and couldn't get enough of it.  After two years of living in the mountians I started to really miss home, especially the food.  So I moved back to New Orleans and have been here ever since.  Along that time I have been coast to coast and alomost every national park in between.</p>
-        <p>I am very much a people person and love to work with others.  I've been with teams in multiple very different situations. Also I've had to manage multiple business in which I loved my employees.  My love from coding comes from so many different areas from apps, movies, to video games.  The more I learn the more respect I have for those who did this before me.  And I can't wait to see what life has instore on the journey.</p>
+        <p>I grew up in south Louisiana in a small Cajun town. I have two sisters, and I am a very new uncle. I went to college for two years before I ended up moving to Colorado. I saw snow for the first time and couldn't get enough of it. After two years of living in the mountains, I started to really miss home, especially the food. So I moved back to New Orleans and have been here ever since. Along that time, I have been coast to coast and almost every national park in between.</p>
+        <p>I am very much a people person and love to work with others. I've been with teams in multiple very different situations. Also, I've had to manage multiple businesses in which I loved my employees. My love for coding comes from so many different areas—from apps, movies, to video games. The more I learn, the more respect I have for those who did this before me. And I can't wait to see what life has in store on the journey.</p>
       </section>
 
       <hr>
@@ -55,7 +55,7 @@
         <h3>Contact Me</h3>
         <ol>
           <li><a href="https://www.linkedin.com/in/william-strohe-58619923a/">Linkedin</a></li>
-          <li><a href="https://github.com/Wstrohe">GritHub Profile</a></li>
+          <li><a href="https://github.com/Wstrohe">GitHub Profile</a></li>
         </ol>
       </section>
     </article>
@@ -64,16 +64,8 @@
   <hr>
 
   <footer>
-    <p>@Copyright</p>
+    <p>&copy; 2023 William Strohe</p>
   </footer>
   <script src="script.js"></script>
-
-  <!--
-  This script places a badge on your repl's full-browser view back to your repl's cover
-  page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green,
-  teal, blue, blurple, magenta, pink!
-  -->
-  <script src="https://replit.com/public/js/replit-badge-v2.js" theme="dark" position="bottom-right"></script>
-</body>
-
+  </body>
 </html>
