--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <hr>
 
   <nav>
-      <a href="#Contact Me"><strong>Contact Me</strong></a><br>
+      <a href="#Contact Me">Contact Me</a>
   </nav>
 
   <hr>
