--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <article>
       <section>
         <h3>Hello, I'm William Strohe</h3>
-        <img src="images/japan.jpeg" alt="This is a photo of me sitting in a rose garden in Japan" width="500" />
+        <img src="Japan2022.jpg" alt="This is a photo of me sitting in a rose garden in Japan" width="500" />
         <p>I am a future software engineer from New Orleans, Louisiana.</p>
         <p>In my time on this rock flying through space, I have worked in a lot of different fields like:</p>
         <ul>
