--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <hr>
 
   <nav>
-      <a href="#Contact Me">Contact Me</a>
+      <a href="#Contact-Me">Contact Me</a>
   </nav>
 
   <hr>
@@ -51,7 +51,7 @@
 
       <hr>
 
-      <section id="Contact Me">
+      <section id="Contact-Me">
         <h3>Contact Me</h3>
         <ol>
           <li><a href="https://www.linkedin.com/in/william-strohe-58619923a/">Linkedin</a></li>
